grafana/grafana-manifests/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prvg-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prvg-grafana
  template:
    metadata:
      name: prvg-grafana
      labels:
        app: prvg-grafana
    spec:
      containers:
      - name: prvg-grafana
        #image: devops-repo.isus.emc.com:8116/nautilus/pravega-grafana:0.10.0-187.9439804
        imagePullPolicy: IfNotPresent
        #image: devops-repo.isus.emc.com:8116/okashtanov/grafana-k8s:0.10.0-168.58f8d2c
        image: okashtanov/grafana:0.10.0-187.9439804
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests: 
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources-config
            readOnly: false
          - mountPath: /etc/grafana/provisioning/dashboards
            name: grafana-dashboards-config
            readOnly: false
         # - mountPath: /etc/grafana/provisioning/plugins
         #   name: grafana-plugins-config
         #   readOnly: false
          - mountPath: /var/lib/grafana/dashboards
            name: grafana-dashboards
            readOnly: false
         # - mountPath: /var/lib/nautilus/devopsprodigy-kubegraf
         #   name: grafana-k8s-plugin
         #   readOnly: false
         # - mountPath: /etc/ssl/certs
         #   name: local-ca-certs
         #   readOnly: true
      volumes:
        - name: grafana-datasources-config
          configMap:
              defaultMode: 420
              name: prvg-grafana-datasources-config
       # - name: grafana-plugins-config
       #   configMap:
       #       defaultMode: 420
       #       name: prvg-grafana-plugins-config
        - name: grafana-dashboards-config
          configMap:
              defaultMode: 420
              name: prvg-grafana-dashboards-config
        - name: grafana-dashboards
          configMap:
              defaultMode: 420
              name: custom-dashboards
       # - name: grafana-k8s-plugin
       #   hostPath:
       #       path: ./devopsprodigy-kubegraf-dd00d1b
       #       type: DirectoryOrCreate
       # - name: local-ca-certs
       #   secret:
       #       secretName: local-ca-certs
