grafana/grafana-manifests/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
  name: grafana
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: prvg-grafana
          servicePort: 3000
        path: /
